# llm-tests-langsec

./: .gitignore  Dockerfile  LLMFormatGeneration.py  README.md  analyzer.py  compare-parsers.py  compile.py  create_dsls.py  db.py  generate-dsls.py  ksy_compiler.py  options.json  requirements.txt  run-compilers.sh
Samples/Daedalus/: JPEG.ddl  PNG.ddl
Samples/Zeek-spicy/: asn1.spicy  dhcp.spicy  ldap.spicy  png.spicy  tftp.spicy  zip.spicy
compilers/: daedalus_compiler.py  dfdl_compiler.py  spicy_compiler.py
figs/: rq2.json  rq3.json
manual-tests/ntp/: deepseek-ntp.ksy  gemini-ntp.ksy  gemini.txt  gpt-ntp.ksy  ntp-rfc.txt
manual-tests/png/: claude-png.ksy  deepseek.txt  gemini.txt  gpt-png.ksy
ntp/: claude-ntp.ksy  claude.txt  deepseek.txt  gpt4.txt
png/: claude.txt  deepseek-png.ksy  gemini-png.ksy  gpt.txt
results/0.0/ARP/: arp-claude-3-5-haiku-20241022.c  arp-claude-3-5-haiku-20241022.ddl  arp-claude-3-5-haiku-20241022.ksy  arp-claude-3-5-haiku-20241022.rs  arp-claude-3-5-haiku-20241022.spicy  arp-claude-3-5-haiku-20241022.xsd  arp-claude-3-5-sonnet-20241022.c  arp-claude-3-5-sonnet-20241022.ddl  arp-claude-3-5-sonnet-20241022.ksy  arp-claude-3-5-sonnet-20241022.rs  arp-claude-3-5-sonnet-20241022.spicy  arp-claude-3-5-sonnet-20241022.xsd  arp-deepseek-ai-deepseek-v3.c  arp-gpt-4-turbo.c  (+28 more)
results/0.25/Bitcoin-transactions/output_daedalus/bitcoin-transactions-gemini-1/: bitcoin-transactions-gemini-1.cabal
results/0.25/NITF/output_daedalus/nitf-gemini-1/: Main.hs  Nitf-gemini-1.5-flash.hs  nitf-gemini-1.cabal
results/1.0/HL7-v2/output_daedalus/hl7-v2-gemini-1/: hl7-v2-gemini-1.cabal
sample_specifications/Daedalus/: BSON.ddl  ICC.ddl  JSON.ddl  MDM.ddl  PDF.ddl  gzip.ddl  lexemes.ddl  utf8.ddl
sample_specifications/Zeek-spicy/: dns.spicy  pe.spicy
(+5871 files in other folders)
