cabal-version:       2.4
name:                nitf-gemini-1
version:             1.0
license-file:        LICENSE
author:              Daedalus
maintainer:          unknown@email.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable nitf-gemini-1
  main-is:             Main.hs
  build-depends:       base >=4.13, text, bytestring, rts-hs, rts-hs-data
  default-language:    Haskell2010
  other-modules:       Nitf-gemini-1.5-flash
